# Speech

./: README.md  makefile
coordinate/: CMakeLists.txt  coordinate.hpp  publisher_member_function.cpp
coordinates_speech/: coordinate.hpp  publisher_member_function.cpp
gcode_test/: convert.py  gcode_struct.txt  gcode_test.cpp  gcodes.txt  string_to_gcode.hpp  test.cpp
gcode_test/tools/: string_to_gcode.cpp  string_to_gcode.hpp
gcode_tools/: string_to_gcode.cpp
install/: setup.bat  setup.ps1
install/share/ament_index/resource_index/parent_prefix_path/: speech_ros2
install/share/speech_ros2/: local_setup.dsv  package.bat  package.dsv  package.ps1
led-matrix/: CMakeCache.txt  CMakeLists.txt  Makefile  animations.hpp  cmake_install.cmake  main.cpp  matrix  test.cpp
log/: latest_build
portaudio_test/: portaudio_test.cpp  recording.cpp
ros2/: instructions.docx  instructions.txt  reference.txt
ros2/speech_ros2/: CMakeLists.txt
ros2/speech_ros2/src/: pa_recorder.hpp  publisher_member_function.cpp  string_to_gcode.hpp  tiny_gpio.h  transcribe_api.hpp  transcription_api.hpp
test_coordinten/: test_coordinaten.cpp
test_coördinaten/: cintest.cpp  coordinaten1 .cpp  test_coordinaten.cpp
zeeslag/: README.txt
zeeslag/client_test/: client  client.c
zeeslag/install/: local_setup.sh  setup.sh
zeeslag/install/zeeslag/lib/zeeslag/: matrixrelay
zeeslag/install/zeeslag/share/ament_index/resource_index/parent_prefix_path/: zeeslag
zeeslag/install/zeeslag/share/zeeslag/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
zeeslag/log/: latest_build
zeeslag/socket/: client.c
zeeslag/zeeslag/: CMakeLists.txt  package.xml
zeeslag/zeeslag/src/: listener.cpp  matrixrelay.cpp
